fix: the align-items property to start to make all the colors visible (#2304)
* fix: the align-items property to start to make all the colors visible

* fix: property position for the sf-color-picker_colors class

* fix: add changes in changelog for 0.12.3

--- a/packages/shared/styles/components/molecules/SfColorPicker.scss
+++ b/packages/shared/styles/components/molecules/SfColorPicker.scss
@@ -15,6 +15,7 @@
     transform: var(--color-picker-transform);
   }
   &__colors {
+    position: relative;
     box-sizing: border-box;
     display: flex;
     width: 100%;
@@ -93,7 +94,7 @@
     }
     &--vertical {
       --color-picker-padding: var(--spacer-base);
-      --color-picker-align-items: center;
+      --color-picker-align-items: start;
       --color-picker-width: auto;
       --color-picker-open-padding: var(--spacer-2xl) 0;
       --color-picker-close-margin: var(--spacer-xs) 0 0 0;
